@@ -35,6 +35,7 @@ import tech.pegasys.teku.spec.logic.common.statetransition.availability.Availabi
 import tech.pegasys.teku.spec.logic.common.statetransition.availability.AvailabilityCheckerFactory;
 import tech.pegasys.teku.spec.logic.common.statetransition.availability.DataAndValidationResult;
 import tech.pegasys.teku.spec.logic.versions.fulu.helpers.MiscHelpersFulu;
+import tech.pegasys.teku.statetransition.datacolumns.DataAvailabilitySampler;
 import tech.pegasys.teku.statetransition.validation.DataColumnSidecarGossipValidator;
 import tech.pegasys.teku.statetransition.validation.GossipValidationHelper;
 import tech.pegasys.teku.statetransition.validation.InternalValidationResult;
@@ -47,6 +48,8 @@ public class StubDataColumnSidecarManager implements AvailabilityCheckerFactory<
   private DataColumnSidecarGossipValidator validator;
   private final Map<UInt64, List<DataColumnSidecar>> dataColumnSidecarBySlot =
       new ConcurrentHashMap<>();
+  private final DataAvailabilitySampler dataAvailabilitySampler;
+  ;
   private static final Logger LOG = LogManager.getLogger();
 
   public void prepareDataColumnSidecarForBlock(
@@ -55,34 +58,64 @@ public class StubDataColumnSidecarManager implements AvailabilityCheckerFactory<
   }
 
   public StubDataColumnSidecarManager(
-      final Spec spec, final RecentChainData recentChainData, final KZG kzg) {
+      final Spec spec,
+      final RecentChainData recentChainData,
+      final KZG kzg,
+      final DataAvailabilitySampler dataAvailabilitySampler) {
     this.spec = spec;
     this.recentChainData = recentChainData;
     this.kzg = kzg;
+    this.dataAvailabilitySampler = dataAvailabilitySampler;
   }
 
   @Override
   public AvailabilityChecker<UInt64> createAvailabilityChecker(final SignedBeaconBlock block) {
+    final SafeFuture<DataAndValidationResult<UInt64>> validationResult = new SafeFuture<>();
     return new AvailabilityChecker<UInt64>() {
 
       @Override
       public boolean initiateDataAvailabilityCheck() {
-        final MiscHelpersFulu helpers =
-            spec.forMilestone(SpecMilestone.FULU).miscHelpers().toVersionFulu().orElseThrow();
-        validator =
-            DataColumnSidecarGossipValidator.create(
-                spec,
-                new ConcurrentHashMap<>(),
-                new GossipValidationHelper(spec, recentChainData),
-                helpers,
-                kzg,
-                new StubMetricsSystem(),
-                recentChainData.getStore());
+        switch (dataAvailabilitySampler.checkSamplingEligibility(block.getMessage())) {
+          case NOT_REQUIRED_BEFORE_FULU -> {
+            validationResult.complete(DataAndValidationResult.notRequired());
+            LOG.debug(
+                "Availability check for slot {} NOT_REQUIRED, Fulu not started", block.getSlot());
+          }
+          case NOT_REQUIRED_OLD_EPOCH -> {
+            validationResult.complete(DataAndValidationResult.notRequired());
+            LOG.debug(
+                "Availability check for slot {} NOT_REQUIRED, epoch too old ", block.getSlot());
+          }
+          case NOT_REQUIRED_NO_BLOBS -> {
+            validationResult.complete(DataAndValidationResult.notRequired());
+            LOG.debug(
+                "Availability check for slot {} NOT_REQUIRED, kzg commitments empty",
+                block.getSlot());
+          }
+          default -> {
+            final MiscHelpersFulu helpers =
+                spec.forMilestone(SpecMilestone.FULU).miscHelpers().toVersionFulu().orElseThrow();
+            validator =
+                DataColumnSidecarGossipValidator.create(
+                    spec,
+                    new ConcurrentHashMap<>(),
+                    new GossipValidationHelper(spec, recentChainData),
+                    helpers,
+                    kzg,
+                    new StubMetricsSystem(),
+                    recentChainData.getStore());
+            validationResult.complete(validateDataColumnSidecar());
+          }
+        }
         return true;
       }
 
       @Override
       public SafeFuture<DataAndValidationResult<UInt64>> getAvailabilityCheckResult() {
+        return validationResult;
+      }
+
+      private DataAndValidationResult<UInt64> validateDataColumnSidecar() {
         final UInt64 blockSlot = block.getSlot();
         final BeaconBlockBody blockBody = block.getMessage().getBody();
         final List<DataColumnSidecar> dataColumnSidecars =
@@ -99,14 +132,7 @@ public class StubDataColumnSidecarManager implements AvailabilityCheckerFactory<
               "Block at slot {} had {} KZG commitments but no sidecar columns were found",
               blockSlot,
               optionalKzgCommitments.get().size());
-          return SafeFuture.completedFuture(
-              DataAndValidationResult.invalidResult(Collections.emptyList()));
-        }
-
-        if (hasNoSidecars) {
-          // No sidecars and no KZG commitments, treat as valid
-          return SafeFuture.completedFuture(
-              DataAndValidationResult.validResult(Collections.emptyList()));
+          return DataAndValidationResult.invalidResult(Collections.emptyList());
         }
 
         return SafeFuture.collectAll(dataColumnSidecars.stream().map(validator::validate))
@@ -122,10 +148,11 @@ public class StubDataColumnSidecarManager implements AvailabilityCheckerFactory<
                                 LOG.warn(
                                     "Data column sidecar validation failed: {}",
                                     result.getDescription()));
-                    return DataAndValidationResult.invalidResult(Collections.emptyList());
+                    return DataAndValidationResult.invalidResult(List.of(blockSlot));
                   }
-                  return DataAndValidationResult.validResult(Collections.emptyList());
-                });
+                  return DataAndValidationResult.validResult(List.of(blockSlot));
+                })
+            .join();
       }
     };
   }
